--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "type": "package",
 
     "require": {
-        "dot/platform": "0.4",
+        "dot/platform": "0.4.*",
         "dot/auth": "*",
         "dot/roles": "*"
     },
