--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,20 @@
 {
-
     "name": "dot/users",
-
-    "description": "The users module of dot/cms",
-
-    "keywords": ["dotcms", "framework", "laravel", "cms", "modules", "plugins"],
-
+    "description": "The users plugin of dot/platform",
+    "keywords": [
+        "framework",
+        "laravel",
+        "cms",
+        "plugins",
+        "platform",
+        "dot",
+        "users"
+    ],
     "license": "MIT",
-
     "type": "package",
-
     "require": {
-        "dot/platform": "0.4.*",
-        "dot/auth": "dev-master",
-        "dot/roles": "dev-master"
+        "dot/platform": "0.4.*"
     },
-
     "autoload": {
         "psr-4": {
             "Dot\\Users\\": "src"
