--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "license": "MIT",
     "type": "package",
     "require": {
-        "dot/platform": "0.4.*"
+        "dot/platform": "0.4.*",
+        "dot/roles": "*"
     },
     "autoload": {
         "psr-4": {
